Kubernetes-seafile-share-main/memcached-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: seafile-memcached
spec:
  replicas: 1
  selector:
    matchLabels:
      app: seafile-memcached
  template:
    metadata:
      labels:
        app: seafile-memcached
    spec:
      containers:
        - name: seafile-memcached
          image: memcached:1.6.18
          command: ["memcached", "-m", "256"]
---
apiVersion: v1
kind: Service
metadata:
  name: seafile-memcached
spec:
  selector:
    app: seafile-memcached
  ports:
    - protocol: TCP
      port: 11211
      targetPort: 11211
  type: ClusterIP
