Kubernetes-seafile-share-main/mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: seafile-mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: seafile-mysql
  template:
    metadata:
      labels:
        app: seafile-mysql
    spec:
      containers:
        - name: seafile-mysql
          image: mariadb:10.11
          volumeMounts:
            - name: mysql-data
              mountPath: /var/lib/mysql
      volumes:
        - name: mysql-data
          persistentVolumeClaim:
            claimName: mysql-pv-claim
---
apiVersion: v1
kind: Service
metadata:
  name: seafile-mysql
spec:
  selector:
    app: seafile-mysql
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
  type: ClusterIP
