Kubernetes-seafile-share-main/seafile-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: seafile
spec:
  replicas: 1
  selector:
    matchLabels:
      app: seafile
  template:
    metadata:
      labels:
        app: seafile
    spec:
      containers:
        - name: seafile
          image: seafileltd/seafile-mc:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: seafile
spec:
  selector:
    app: seafile
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
