Kubernetes-seafile-share-main/seafile-network.yaml
apiVersion: v1
kind: NetworkPolicy
metadata:
  name: seafile-net
spec:
  podSelector:
    matchLabels:
      app: seafile
  ingress: []
